k8s/calico-homework/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: app  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: multitool-frontend
  namespace: app  
spec:
  selector:
    app: frontend
  ports:
    - name: multitool
      protocol: TCP
      port: 8080
      targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: app  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: multitool-backend
  namespace: app  
spec:
  selector:
    app: backend
  ports:
    - name: multitool
      protocol: TCP
      port: 8080
      targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache
  namespace: app  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cache
  template:
    metadata:
      labels:
        app: cache
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: multitool-cache
  namespace: app  
spec:
  selector:
    app: cache
  ports:
    - name: multitool
      protocol: TCP
      port: 8080
      targetPort: 8080
